--- a/PanelPM.html
+++ b/PanelPM.html
@@ -18,16 +18,17 @@
 <body class="d-flex flex-column min-vh-100">
     <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-primary">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-8 text-left">
-                    <h1 class="font-weight-bold display-4 d-none d-sm-flex">Sistema de Vacunación <br class="d-none d-lg-inline"> COVID 19</h1>
-                    <h2 class="font-weight-bold d-flex d-sm-none">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h2>
-                </div>
-                <div class="d-none d-lg-flex col-lg-4 my-auto">
-                    <a href="https://www.gob.pe/minsa/">
-                        <img class="img-fluid rounded border" src="Img/MINSA-LOGO.jpg" alt="">
-                    </a>
-                </div>
+            <a href="#" class="navbar-brand">
+                <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex" height="75px" src="Img/perfil-vacio.webp" alt="">
+                <h3 class="d-none d-lg-inline-flex ml-3">Nombre Apellido</h3>
+
+                <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px" src="Img/perfil-vacio.webp" alt="">
+                <h4 class="d-lg-none d-inline-flex ml-3">Nombre Apellido</h4>
+            </a>
+            <div class="d-none d-lg-flex col-lg-4 my-auto">
+                <a href="https://www.gob.pe/minsa/">
+                    <img class="img-fluid rounded border" src="Img/MINSA-LOGO.jpg" alt="">
+                </a>
             </div>
         </div>
     </nav>
@@ -43,6 +44,45 @@
         </div>
     </nav>
 
+    <div class="d-flex" id="wrapper" class="toggled">
+
+        <!-- Sidebar -->
+        <div class="bg-light border-right" id="sidebar-wrapper">
+            <div class="sidebar-heading h4">Menú Personal Médico</div>
+            <div class="list-group list-group-flush">
+                <a href="#" class="list-group-item list-group-item-action bg-light">Información Personal</a>
+                <a href="#" class="list-group-item list-group-item-action bg-light">Solicitar Cambio de Turno</a>
+                <a href="#" class="list-group-item list-group-item-action bg-light">Cerrar Sesión</a>
+            </div>
+        </div>
+        <!-- /#sidebar-wrapper -->
+
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+
+            <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom d-md-none">
+                <button class="btn btn-primary " id="menu-toggle">Desplegar Menú</button>
+            </nav>
+
+            <div class="container-fluid">
+                <div class="row">
+                    <article class="col">
+                        <h1 class="mt-4">Contenido</h1>
+                        <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
+                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>. The top navbar is optional, and just for demonstration. Just create an element with the <code>#menu-toggle</code> ID which will toggle the menu when
+                            clicked.
+                        </p>
+                    </article>
+                </div>
+            </div>
+        </div>
+        <!-- /#page-content-wrapper -->
+
+    </div>
+    <!-- /#wrapper -->
+    <!-- Menu Toggle Script -->
+
+
     <footer class="mt-auto bg-dark text-light text-center">
         <p> IHC-Grupo 4 Copyright © 2021 Todos los derechos reservados</p>
     </footer>
@@ -50,6 +90,12 @@
     <script src="js/jquery-3.5.1.min.js "></script>
     <script src="js/bootstrap.min.js "></script>
     <script src="js/popper.min.js "></script>
+    <script>
+        $("#menu-toggle").click(function(e) {
+            e.preventDefault();
+            $("#wrapper").toggleClass("toggled");
+        });
+    </script>
 </body>
 
 </html>
