--- a/LoginPM.html
+++ b/LoginPM.html
@@ -44,40 +44,44 @@
     </nav>
 
     <!-- Sección de Formulario de Login-->
-    <section class="container mt-5">
+    <section class="container mt-3">
         <div class="row mx-3">
             <form class="col-lg-6 my-auto">
-                <h1 class="h2">Llene sus datos de Personal Médico</h1>
-                <div class="form-row">
-                    <div class="col-8">
-                        <input type="text" class="form-control form-control-lg" placeholder="DNI">
-                    </div>
-                    <div class="col-4">
-                        <input type="text" class="form-control form-control-lg" placeholder="UBIGEO">
-                    </div>
+                <h1 class="h2 d-none d-sm-flex mt-2 mb-4 ">Llene sus datos de Militar</h1>
+                <h3 class="d-flex d-sm-none mt-2 mb-4">Llene sus datos de Militar</h3>
+
+            <div class="form-row">
+                <div class="col-8">
+                    <input type="text" class="form-control form-control-lg" placeholder="DNI">
                 </div>
-                <div class="form-row mt-3">
-                    <div class="col">
-                        <input type="text" class="form-control form-control-lg" placeholder="Fecha de emisión de DNI">
-                    </div>
+                <div class="col-4">
+                    <input type="text" class="form-control form-control-lg" placeholder="UBIGEO">
                 </div>
-                <div class="form-row mt-3">
-                    <div class="col">
-                        <input type="text" class="form-control form-control-lg" placeholder="Código de Institución">
-                    </div>
+            </div>
+            <div class="form-row mt-4">
+                <div class="col">
+                    <input type="text" class="form-control form-control-lg" placeholder="Fecha de emisión de DNI">
                 </div>
-                <button class="btn btn-lg btn-primary mt-3 ml-auto">Ingresar</button>
-            </form>
+            </div>
+            <div class="form-row mt-4">
+                <div class="col">
+                    <input type="text" class="form-control form-control-lg" placeholder="Código de Institución">
+                </div>
+            </div>
+
+            <button class="btn btn-lg btn-primary ml-auto mt-5">Ingresar</button>
+        </form>
 
 
             <!-- Sección de MINSA y Anuncio-->
             <div class="col-lg-6 my-4 ml-auto">
-                <div class="mt-4 embed-responsive embed-responsive-16by9">
+                <div class="mt-4 embed-responsive embed-responsive-16by9 mb-2">
                     <iframe class="embed-responsive-item" height="auto" src="https://www.youtube.com/embed/W2Nmz9ViOFA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
     </section>
+    <!-- Reserva de derechos-->
     <footer class="mt-auto bg-dark text-light text-center">
         <p> IHC-Grupo 4 Copyright © 2021 Todos los derechos reservados</p>
     </footer>
