--- a/RegistroAM.html
+++ b/RegistroAM.html
@@ -7,23 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Bootstrap CSS-->
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"><!-- Custom CSS-->
     <link type="text/css" rel="stylesheet" href="css/estilos.css">
-    <title>Adulto Mayor</title>
+    <!--TITULO DE PÁGINA-->
+    <link rel="shortcut icon" href="Img/Escudo.png" type="image/x-icon">
+    <title>Sistema de Vacunación COVID 19</title>
 </head>
 
-<body class="d-flex flex-column min-vh-100">
-    <nav class="navbar navbar-dark navbar-expand-sm text-light bg-primary">
+    <!--Encabezado 1-->
+    <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-primary ">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 text-center">
-                    <h1 class="font-weight-bold display-4">Sistema de Vacunación <br class="d-none d-lg-inline"> COVID
-                        19</h1>
+                <div class="col-lg-8 text-left ">
+                    <h1 class="font-weight-bold display-4 d-none d-sm-flex">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h1>
+                    <h2 class="font-weight-bold d-flex d-sm-none">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h2>
                 </div>
-                <div class="d-none d-lg-flex col-lg-4 my-auto"><a href="https://www.gob.pe/minsa/"><img
-                            class="img-fluid rounded border" src="Img/MINSA-LOGO.jpg" alt="Logo-Minsa"></a>
+                <div class="d-none d-lg-flex col-lg-4 my-auto">
+                    <a href="https://www.gob.pe/minsa/">
+                        <img class="img-fluid rounded border" src="Img/MINSA-LOGO.jpg" alt="">
+                    </a>
                 </div>
             </div>
         </div>
     </nav>
+
     <nav class="navbar navbar-dark navbar-expand-sm text-light bg-tercero">
         <div class="container">
             <div class="row">
