--- a/login_Militar.html
+++ b/login_Militar.html
@@ -71,19 +71,20 @@
                 </div>
 
                 <button class="btn btn-lg btn-primary ml-auto mt-5">Ingresar</button>
-
             </form>
 
 
             <!-- Sección de MINSA y Anuncio-->
-            <div class="col-lg-6 mt-3 ml-auto">
+            <div class="col-lg-6 mt-3 my-4 ml-auto">
                 <div class="mt-4 embed-responsive embed-responsive-16by9 mb-2">
                     <iframe class="embed-responsive-item" height="auto" src="https://www.youtube.com/embed/W2Nmz9ViOFA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
     </section>
-
+    <footer class="mt-auto bg-dark text-light text-center">
+        <p> IHC-Grupo 4 Copyright © 2021 Todos los derechos reservados</p>
+    </footer>
 
     <script src="js/jquery-3.5.1.min.js "></script>
     <script src="js/bootstrap.min.js "></script>
