--- a/RegistroAM.html
+++ b/RegistroAM.html
@@ -4,6 +4,8 @@
 <head>
     <!-- Required meta tags-->
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="Img/Escudo.png" type="image/x-icon">
+    <title>Sistema de Vacunación COVID 19</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Bootstrap CSS-->
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"><!-- Custom CSS-->
     <link type="text/css" rel="stylesheet" href="css/estilos.css">
