--- a/ReporteAM.html
+++ b/ReporteAM.html
@@ -77,10 +77,10 @@
                 </div>
             </nav>
 
-            <div class="container">
+            <div class="container bg-tercero>
 
-                <div class="col-lg-12">
-                    <div class="row">
+                <div class="col-lg-12 ">
+                    <div class="row ">
                         <h1 class="mt-4">REPORTE DE VACUNACIÓN</h1>
                         <table class="table table-bordered ">
 
