Correcciones y Pié de página

--- a/login_Adulto_Mayor.html
+++ b/login_Adulto_Mayor.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <!--Meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <!--TITULO DE PÁGINA-->
     <link rel="shortcut icon" href="Img/Escudo.png" type="image/x-icon">
     <title>Sistema de Vacunación COVID 19</title>
 
     <!--ARCHIVOS CSS BOOTSTRAP 4-->
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
-    
+
     <!--ARCHIVO CSS PERSONALIZADOS-->
     <link type="text/css" rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
+
+<body class="d-flex flex-column min-vh-100">
     <!--Encabezado 1-->
     <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-primary ">
         <div class="container">
@@ -36,10 +38,10 @@
     <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-tercero">
         <div class="container">
             <div class="row">
-            <div class="col-lg-12 text-left">
-                <h3 class="font-weight-bold display 4 d-none d-sm-flex">Adulto Mayor </h3>
-                <h4 class="font-weight-bold display 4 d-flex d-sm-none">Adulto Mayor </h4>
-            </div>
+                <div class="col-lg-12 text-left">
+                    <h3 class="font-weight-bold display 4 d-none d-sm-flex">Adulto Mayor </h3>
+                    <h4 class="font-weight-bold display 4 d-flex d-sm-none">Adulto Mayor </h4>
+                </div>
             </div>
         </div>
     </nav>
@@ -48,8 +50,8 @@
     <section class="container mt-3">
         <div class="row mx-3">
             <form class="col-lg-6 my-auto">
-                    <h1 class="h2 d-none d-sm-flex mt-2 mb-4 ">Llene sus datos de Adulto Mayor</h1>
-                    <h3 class="d-flex d-sm-none mt-2 mb-4">Llene sus datos de Adulto Mayor</h3>
+                <h1 class="h2 d-none d-sm-flex mt-2 mb-4 ">Llene sus datos de Adulto Mayor</h1>
+                <h3 class="d-flex d-sm-none mt-2 mb-4">Llene sus datos de Adulto Mayor</h3>
 
                 <div class="form-row">
                     <div class="col-8">
