--- a/RegistroAM.html
+++ b/RegistroAM.html
@@ -6,13 +6,17 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="Img/Escudo.png" type="image/x-icon">
     <title>Sistema de Vacunación COVID 19</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Bootstrap CSS-->
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"><!-- Custom CSS-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS-->
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Custom CSS-->
     <link type="text/css" rel="stylesheet" href="css/estilos.css">
     <!--TITULO DE PÁGINA-->
     <link rel="shortcut icon" href="Img/Escudo.png" type="image/x-icon">
     <title>Sistema de Vacunación COVID 19</title>
 </head>
+
+<body class="d-flex flex-column min-vh-100">
 
     <!--Encabezado 1-->
     <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-primary ">
@@ -40,7 +44,8 @@
                 </div>
             </div>
         </div>
-    </nav><!-- Sección de Formulario de Login-->
+    </nav>
+    <!-- Sección de Formulario de Login-->
     <section class="container">
         <div class="row">
             <form class="col-lg-8">
@@ -55,35 +60,34 @@
                         <div class="form-group">
                             <div class="form-check-inline"><label class="form-check-label"><input
                                         class="form-check-input" type="checkbox" value="">Psicomotora</label></div>
-                            <div class="form-check-inline"><label class="form-check-label"><input
+                <div class="form-check-inline"><label class="form-check-label"><input
                                         class="form-check-input" type="checkbox" value="">Sordera</label></div>
-                            <div class="form-check-inline"><label class="form-check-label"><input
+                <div class="form-check-inline"><label class="form-check-label"><input
                                         class="form-check-input" type="checkbox" value="">Visual</label></div>
-                            <div class="form-check-inline" style="font-size:smaller;">Otros: <input
-                                    class="form-control form-control-sm" type="text" placeholder="Especifique"
-                                    name="text1"></div>
-                        </div>
-                    </label></div>
-                <div class="form-row mt-3 text-center justify-content-center rounded bg-form"><label>¿Necesita la ayuda
+                <div class="form-check-inline" style="font-size:smaller;">Otros: <input class="form-control form-control-sm" type="text" placeholder="Especifique" name="text1"></div>
+        </div>
+        </label>
+        </div>
+        <div class="form-row mt-3 text-center justify-content-center rounded bg-form"><label>¿Necesita la ayuda
                         de un acompañante?<br>
                         <div class="form-group"><button class="btn btn-secondary" type="button">Si</button><button
                                 class="btn btn-secondary" type="button">No</button></div>
                     </label></div>
-                <div class="form-row mt-3 text-center justify-content-center rounded">
-                    <div class="form-group"><button class="btn btn-lg btn-primary" type="button"><i
-                                class="fas fa-edit"></i> Registrar</button><button class="btn btn-lg btn-secondary"
-                            type="button">Cancelar</button></div>
-                </div>
-            </form><!-- Sección de MINSA y Anuncio-->
-            <div class="col-lg-4">
-                <div class="row justify-content-center align-items-center"><img class="img-fluid"
-                        src="Img/ANUNCIO-AM-RED.png" alt="" style="height: 60vh; width:auto;"></div>
-            </div>
+        <div class="form-row mt-3 text-center justify-content-center rounded">
+            <div class="form-group"><button class="btn btn-lg btn-primary" type="button"><i
+                                class="fas fa-edit"></i> Registrar</button><button class="btn btn-lg btn-secondary" type="button">Cancelar</button></div>
+        </div>
+        </form>
+        <!-- Sección de MINSA y Anuncio-->
+        <div class="col-lg-4">
+            <div class="row justify-content-center align-items-center"><img class="img-fluid" src="Img/ANUNCIO-AM-RED.png" alt="" style="height: 60vh; width:auto;"></div>
+        </div>
         </div>
     </section>
     <footer class="mt-auto bg-dark text-light text-center">
         <p> IHC-Grupo 3 Copyright © 2021 Todos los derechos reservados</p>
-    </footer><!-- iconos-->
+    </footer>
+    <!-- iconos-->
     <script src="https://kit.fontawesome.com/160f79963e.js" crossorigin="anonymous"></script>
     <script src="dist/bundle.js"></script>
 </body>
