--- a/RegistroAM.html
+++ b/RegistroAM.html
@@ -23,8 +23,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 text-left ">
-                    <h1 class="font-weight-bold display-4 d-none d-sm-flex">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h1>
-                    <h2 class="font-weight-bold d-flex d-sm-none">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h2>
+                    <h1 class="font-weight-bold display-4 d-none d-sm-flex">Sistema de Vacunación <br
+                            class="d-none d-lg-inline "> COVID 19</h1>
+                    <h2 class="font-weight-bold d-flex d-sm-none">Sistema de Vacunación <br class="d-none d-lg-inline ">
+                        COVID 19</h2>
                 </div>
                 <div class="d-none d-lg-flex col-lg-4 my-auto">
                     <a href="https://www.gob.pe/minsa/">
@@ -73,17 +75,25 @@
                         <div class="form-group"><button class="btn btn-secondary" type="button">Si</button><button
                                 class="btn btn-secondary" type="button">No</button></div>
                     </label></div>
-        <div class="form-row mt-3 text-center justify-content-center rounded">
-            <div class="form-group"><button class="btn btn-lg btn-primary" type="button"><i
-                                class="fas fa-edit"></i> Registrar</button><button class="btn btn-lg btn-secondary" type="button">Cancelar</button></div>
-        </div>
-        </form>
-        <!-- Sección de MINSA y Anuncio-->
-        <div class="col-lg-4">
-            <div class="row justify-content-center align-items-center"><img class="img-fluid" src="Img/ANUNCIO-AM-RED.png" alt="" style="height: 60vh; width:auto;"></div>
-        </div>
+                <div class="form-row mt-3 text-center justify-content-center rounded">
+                    <div class="form-group">
+                        <a href="ReporteAM.html" class="btn btn-lg btn-primary">
+                            <i class="fas fa-edit"></i> Registrar</i> </a>
+
+                        <a href="login_Adulto_Mayor.html" class="btn btn-lg btn-secondary">
+                            <i class="fas fa-window-close"></i> Cancelar </a>
+                       
+                    </div>
+                </div>
+            </form><!-- Sección de MINSA y Anuncio-->
+            <div class="col-lg-4">
+                <div class="row justify-content-center align-items-center"><img class="img-fluid"
+                        src="Img/ANUNCIO-AM-RED.png" alt="" style="height: 60vh; width:auto;"></div>
+            </div>
+
         </div>
     </section>
+
     <footer class="mt-auto bg-dark text-light text-center">
         <p> IHC-Grupo 3 Copyright © 2021 Todos los derechos reservados</p>
     </footer>
