--- a/ReporteAM.html
+++ b/ReporteAM.html
@@ -2,17 +2,19 @@
 <html lang="es">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--Meta tags-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!--TITULO DE PÁGINA-->
     <link rel="shortcut icon" href="Img/Escudo.png" type="image/x-icon">
     <title>Sistema de Vacunación COVID 19</title>
-    <!-- Bootstrap CSS -->
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
-    <!-- Custom CSS -->
-    <link type="text/css" rel="stylesheet" href="css/estilos.css" />
-    <title>Adulto Mayor</title>
+
+    <!--ARCHIVOS CSS BOOTSTRAP 4-->
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!--ARCHIVO CSS PERSONALIZADOS-->
+    <link type="text/css" rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -77,66 +79,96 @@
                 </div>
             </nav>
 
-            <div class="container bg-tercero>
+            <div class="container ">
 
-                <div class="col-lg-12 ">
-                    <div class="row ">
-                        <h1 class="mt-4">REPORTE DE VACUNACIÓN</h1>
+                <div class="col-12 ">
+                    <div class="row mt-4 ">
+                        <h3 class="card-title" style="font-weight:bold;"> REPORTE DE VACUNACIÓN</h3>
                         <table class="table table-bordered ">
-
                             <tbody>
                                 <tr>
-                                    <th scope="row">FECHA DE VACUNACIÓN</th>
+                                    <th scope="row">Fecha de vacunación</th>
                                     <td>13/02/2021</td>
                                 </tr>
 
                                 <tr>
-                                    <th scope="row">LUGAR DE VACUNACIÓN</th>
-                                    <td>Hospital A.L</td>
+                                    <th scope="row">Lugar de vacunación</th>
+                                    <td>Hospital Aquiles Matto</td>
                                 </tr>
 
                                 <tr>
-                                    <th scope="row">PABELLÓN</th>
+                                    <th scope="row">Pabellón</th>
                                     <td>5 C</td>
                                 </tr>
 
                                 <tr>
-                                    <th scope="row">HORARIO DE ATENCIÓN</th>
+                                    <th scope="row">Horario de atención</th>
                                     <td>8:00 - 10:00 a.m</td>
                                 </tr>
                             </tbody>
                         </table>
+
                     </div>
 
 
-                    <div class="container" style="margin-top: 60px;">
-                        <h5 class="h1" style="color: #8B2B16;">AL ASISTIR A TU CENTRO DE VACUNACIÓN <br>
-                            ¡NO TE OLVIDES!</h5>
-
-                        <div class="row text-center">
-                            <div class="col-sm-6 col-lg-4 ">
-                                <p>LLEVAR TU DNI</p>
-                                <img src="Img/dni.jpg" class="img-fluid" alt="" >
-                            </div>
-                            <div class="col-sm-6 col-lg-4">
-                                <p>DISTANCIA FÍSICA</p>
-                                <img src="Img/distanciamiento.png" class="img-fluid" alt=""
-                                    style="width:auto; height:auto;">
-                            </div>
-                            <div class="col-lg-4">
-                                <p>USAR MASCARILLA</p>
-                                <img src="Img/mascarillas.png" class="img-fluid" alt="" >
-                            </div>
-
-
-                        </div>
-                    </div>
 
 
                 </div>
+
+
+                <div class="container text-center" style="margin-top: 60px;">
+                    <h5 class="h1" style="color: #8B2B16;">AL ASISTIR A TU CENTRO DE VACUNACIÓN <br>
+                        ¡NO TE OLVIDES!</h5>
+
+                    <div class="row text-center d-inline-flex">
+
+                        <div class="col-sm-6 col-lg-4 ">
+                            <div class="card h-100">
+                                <div class="card-header">
+                                    <h5 class="card-title"> LLEVAR TU DNI</h5>
+                                </div>
+                                <div class="card-body">
+                                    <img src="Img/dni.jpg" class="img-fluid" alt="">
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="card h-100">
+                                <div class="card-header">
+                                    <h5 class="card-title"> DISTANCIA FÍSICA</h5>
+                                </div>
+                                <div class="card-body">
+                                    <img src="Img/distanciamiento.png" class="img-fluid" alt="">
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4">
+                            <div class="card h-100">
+                                <div class="card-header">
+                                    <h5 class="card-title"> USAR MASCARILLA</h5>
+                                </div>
+                                <div class="card-body">
+                                    <img src="Img/mascarillas.png" class="img-fluid" alt="">
+                                </div>
+
+                            </div>
+                        </div>
+
+
+
+
+                    </div>
+                </div>
+
+
             </div>
         </div>
-        <!-- /#page-content-wrapper -->
+    </div>
+    <!-- /#page-content-wrapper -->
 
     </div>
     <!-- /#wrapper -->
