cambiando css por clases en ReporteAM

--- a/ReporteAM.html
+++ b/ReporteAM.html
@@ -37,26 +37,12 @@
         </div>
     </nav>
 
-    <!--
-    <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-tercero">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-left">
-                    <h3 class="font-weight-bold d-none d-sm-flex">Adulto Mayor </h3>
-                    <h4 class="font-weight-bold d-flex d-sm-none">Adulto Mayor </h4>
-                </div>
-            </div>
-        </div>
-    </nav>
--->
-
-
     <div class="d-flex" id="wrapper" class="toggled">
 
         <!-- Sidebar -->
         <div class="bg-light border-right" id="sidebar-wrapper">
             <div class="sidebar-heading h4">MENÚ DE OPCIONES</div>
-            <div class="list-group list-group-flush d-inline-flex">
+            <div class="list-group list-group-flush d-inline-flex align-items-center">
                 <a href="#" class="list-group-item list-group-item-action bg-light">
                     <i class="fas fa-file-signature"></i> Solicitar cambio de turno</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">
@@ -74,17 +60,19 @@
 
                 <div class="col-lg-12 d-inline-flex">
                     <button class="btn btn-primary " id="menu-toggle"><i class="fas fa-lg fa-bars"></i></button>
-                    <h3 class="font-weight-bold d-none d-sm-flex"> Adulto Mayor </h3>
-                    <h4 class="font-weight-bold d-flex d-sm-none"> Adulto Mayor </h4>
+                    <h3 class="font-weight-bold text-white col-4 mt-2 d-none d-sm-flex" > Adulto Mayor </h3>
+                    <h4 class="font-weight-bold text-white col-4 mt-2 d-flex d-sm-none" > Adulto Mayor </h4>
                 </div>
             </nav>
 
             <div class="container ">
 
                 <div class="col-12 ">
-                    <div class="row mt-4 ">
-                        <h3 class="card-title" style="font-weight:bold;"> REPORTE DE VACUNACIÓN</h3>
-                        <table class="table table-bordered ">
+                    <div class="row mt-4" >
+                        
+                        <h3 class="font-weight-bold d-none d-sm-flex"> Reporte de Turno de Vacunación contra COVID - 19 </h3>
+                        <h4 class="font-weight-bold d-flex d-sm-none"> Reporte de Turno de Vacunación contra COVID - 19  </h4>
+                        <table class="table table-bordered mt-4">
                             <tbody>
                                 <tr>
                                     <th scope="row">Fecha de vacunación</th>
@@ -116,8 +104,8 @@
                 </div>
 
 
-                <div class="container text-center" style="margin-top: 60px;">
-                    <h5 class="h1" style="color: #8B2B16;">AL ASISTIR A TU CENTRO DE VACUNACIÓN <br>
+                <div class="container mt-4 mb-3 text-center">
+                    <h5 class="h1 text-danger">AL ASISTIR A TU CENTRO DE VACUNACIÓN <br>
                         ¡NO TE OLVIDES!</h5>
 
                     <div class="row text-center d-inline-flex">
@@ -157,9 +145,6 @@
 
                             </div>
                         </div>
-
-
-
 
                     </div>
                 </div>
