LoginPM- correccion de "llene sus datos Personal Médico"

--- a/LoginPM.html
+++ b/LoginPM.html
@@ -47,8 +47,8 @@
     <section class="container mt-3">
         <div class="row mx-3">
             <form class="col-lg-6 my-auto">
-                <h1 class="h2 d-none d-sm-flex mt-2 mb-4 ">Llene sus datos de Militar</h1>
-                <h3 class="d-flex d-sm-none mt-2 mb-4">Llene sus datos de Militar</h3>
+                <h1 class="h2 d-none d-sm-flex mt-2 mb-4 ">Llene sus datos de Personal Médico</h1>
+                <h3 class="d-flex d-sm-none mt-2 mb-4">Llene sus datos de PErsonal Médico</h3>
 
             <div class="form-row">
                 <div class="col-8">
