--- a/seleccion_Usuario.html
+++ b/seleccion_Usuario.html
@@ -37,7 +37,7 @@
     </nav>
 
     <!--Menu-->
-    <section class="container mt-1 ">
+    <section class="container mt-1 mb-3">
         <!--Enunciado Superior-->
         <div class="row mx-5 d-flex justify-content-center text-center ">
             <h1 class="display-4 d-none d-lg-flex font-weight-bold text-primary mt-2 mb-3 ">¿A qué rol pertenece usted?</h1>
