Cambio de loginPM y loginAdultoMayor por CUI

--- a/LoginPM.html
+++ b/LoginPM.html
@@ -55,7 +55,7 @@
                     <input type="text" class="form-control form-control-lg" placeholder="DNI">
                 </div>
                 <div class="col-4">
-                    <input type="text" class="form-control form-control-lg" placeholder="UBIGEO">
+                    <input type="text" class="form-control form-control-lg" placeholder="CUI">
                 </div>
             </div>
             <div class="form-row mt-4">
