login_Adulto_Mayor

--- a/login_Adulto_Mayor.html
+++ b/login_Adulto_Mayor.html
@@ -80,12 +80,13 @@
                     </div>
                 </div>
 
-                <div class="form-row text-center justify-content-center align-items-center">
+                <div class="form-row text-center mb-3 justify-content-between align-items-center ">
                     <div class="col">
-                        <a href="RegistroAM.html" class="btn btn-lg btn-primary ml-auto mt-5">
+                        <a href="RegistroAM.html" class="btn btn-lg btn-primary ml-auto mt-3">
                             <i class="fas fa-sign-in-alt"></i> Ingresar</i> </a>
-
-                        <a href="seleccion_Usuario.html" class="btn btn-lg btn-secondary ml-auto mt-5 ">
+                    </div>
+                    <div class="col">
+                        <a href="seleccion_Usuario.html" class="btn btn-lg btn-secondary ml-auto mt-3 ">
                             <i class="fas fa-window-close"></i> Cancelar</a>
 
                     </div>
