--- a/login_Adulto_Mayor.html
+++ b/login_Adulto_Mayor.html
@@ -15,6 +15,7 @@
 
     <!--ARCHIVO CSS PERSONALIZADOS-->
     <link type="text/css" rel="stylesheet" href="css/estilos.css">
+
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -51,21 +52,21 @@
     <!-- Sección de Formulario de Login-->
     <section class="container mt-3">
         <div class="row mx-3">
-            <form class="col-lg-5 my-auto">
+            <form class="col-lg-6 my-auto">
                 <h1 class="h2 d-none d-sm-flex mt-2 mb-4 ">Llene sus datos personales</h1>
                 <h3 class="d-flex d-sm-none mt-2 mb-4">Llene sus datos personales</h3>
-                <div class="form-row mt-4">
-                    <div class="col">
-                        <img src="img/dni-ejemplo.png" alt="" class="img-fluid mt-2 mb-4 " style="height: auto; width: auto;" >
-                    </div>
-                </div>
 
                 <div class="form-row">
                     <div class="col-8">
-                        <input type="text" class="form-control form-control-lg" placeholder="Número de DNI">
+                            <input type="text" class="form-control form-control-lg" placeholder="Número de DNI">
                     </div>
-                    <div class="col-4">
+                    <div class="col-3">
                         <input type="text" class="form-control form-control-lg" placeholder="CUI">
+                    </div>
+                    <div class="col-1">
+                        <a href="#"  data-toggle="popover" data-img="Img/dni-ejemplo.png" title="Partes del DNI" >
+                            <img class="img-fluid " src="Img/informacion.png " alt=" "> 
+                        </a>
                     </div>
                 </div>
                 <div class="form-row mt-4">
@@ -80,13 +81,13 @@
                     </div>
                 </div>
 
-                <div class="form-row text-center mb-3 justify-content-between align-items-center ">
+                <div class="form-row text-center mb-3 justify-content-between align-items-center mt-5">
                     <div class="col">
-                        <a href="RegistroAM.html" class="btn btn-lg btn-primary ml-auto mt-3">
+                        <a href="RegistroAM.html" class="btn btn-lg btn-primary ml-auto">
                             <i class="fas fa-sign-in-alt"></i> Ingresar</i> </a>
                     </div>
                     <div class="col">
-                        <a href="seleccion_Usuario.html" class="btn btn-lg btn-secondary ml-auto mt-3 ">
+                        <a href="seleccion_Usuario.html" class="btn btn-lg btn-secondary ml-auto">
                             <i class="fas fa-window-close"></i> Cancelar</a>
 
                     </div>
@@ -96,7 +97,7 @@
 
 
             <!-- Sección de MINSA y Anuncio-->
-            <div class="col-lg-7 mt-3 ml-auto my-4">
+            <div class="col-lg-6 mt-3 ml-auto my-4">
                 <div class="mt-4 embed-responsive embed-responsive-16by9 mb-2">
                     <iframe class="embed-responsive-item" height="auto" src="https://www.youtube.com/embed/W2Nmz9ViOFA"
                         frameborder="0"
@@ -119,7 +120,10 @@
     <script src="https://kit.fontawesome.com/160f79963e.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.min.js "></script>
     <script src="js/bootstrap.min.js "></script>
-    <script src="js/popper.min.js "></script>
+    <script src="js/popover.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
