--- a/login_Adulto_Mayor.html
+++ b/login_Adulto_Mayor.html
@@ -58,13 +58,13 @@
 
                 <div class="form-row">
                     <div class="col-8">
-                            <input type="text" class="form-control form-control-lg" placeholder="Número de DNI">
+                            <input type="text" class="form-control form-control-lg" placeholder="Número de DNI(1)">
                     </div>
                     <div class="col-3">
-                        <input type="text" class="form-control form-control-lg" placeholder="CUI">
+                        <input type="text" class="form-control form-control-lg" placeholder="CUI(2)">
                     </div>
                     <div class="col-1">
-                        <a href="#"  data-toggle="popover" data-img="Img/dni-ejemplo.png" title="Partes del DNI" >
+                        <a href="#"  data-toggle="popover" data-img="Img/DNI.png" title="Partes del DNI" >
                             <img class="img-fluid " src="Img/informacion.png " alt=" "> 
                         </a>
                     </div>
@@ -72,7 +72,7 @@
                 <div class="form-row mt-4">
                     <div class="col">
                         <input type="text" id="date" class="form-control form-control-lg"
-                            placeholder="Fecha de emisión del DNI">
+                            placeholder="Fecha de emisión del DNI(3)">
                     </div>
                 </div>
                 <div class="form-row mt-4">
