--- a/seleccion_Usuario.html
+++ b/seleccion_Usuario.html
@@ -117,7 +117,7 @@
             </div>
         </a>
 
-        <a href="login_Militar.html " style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
+        <a href="login_Militar.html " style="text-decoration:none " class="row boton-inicial btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button href="# " type="button " class="btn btn-secondary boton1 ">
