--- a/PanelPM.html
+++ b/PanelPM.html
@@ -48,11 +48,16 @@
 
         <!-- Sidebar -->
         <div class="bg-light border-right" id="sidebar-wrapper">
-            <div class="sidebar-heading h4">Menú Personal Médico</div>
-            <div class="list-group list-group-flush">
-                <a href="#" class="list-group-item list-group-item-action bg-light">Información Personal</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Solicitar Cambio de Turno</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Cerrar Sesión</a>
+            <div class="sidebar-heading h4">MENÚ DE OPCIONES</div>
+            <div class="list-group list-group-flush d-inline-flex align-items-center">
+                <a href="#" class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
+                    <i class="fas fa-user"></i> Información Personal y Turnos</a>
+                <a href="#" class="list-group-item list-group-item-action bg-light">
+                    <i class="fas fa-question"></i> Consultar fecha de Vacunación</a>
+                <a href="#" class="list-group-item list-group-item-action bg-light">
+                    <i class="fas fa-file-signature"></i> Solicitar cambio de turno</a>
+                <a href="seleccion_Usuario.html" class="list-group-item list-group-item-action bg-light">
+                    <i class="fas fa-sign-out-alt"></i> Salir</a>
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -65,14 +70,36 @@
             </nav>
 
             <div class="container-fluid">
-                <div class="row">
-                    <article class="col">
-                        <h1 class="mt-4">Contenido</h1>
-                        <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>. The top navbar is optional, and just for demonstration. Just create an element with the <code>#menu-toggle</code> ID which will toggle the menu when
-                            clicked.
-                        </p>
-                    </article>
+                <div class="row m-4">
+                    <div class="col-lg-6">
+                        <h3 class="font-weight-bold d-none d-sm-flex"> Información General </h3>
+                        <h4 class="font-weight-bold d-flex d-sm-none"> Información General </h4>
+                        <table class="table table-bordered mt-4">
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Nombre Completo</th>
+                                    <td>Alexander Gómez</td>
+                                </tr>
+
+                                <tr>
+                                    <th scope="row">Lugar de trabajo</th>
+                                    <td>Hospital Aquiles Matto </td>
+                                </tr>
+
+                                <tr>
+                                    <th scope="row">Cargo</th>
+                                    <td>Enfermero</td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <h3 class="font-weight-bold d-none d-sm-flex"> Turnos </h3>
+                        <h4 class="font-weight-bold d-flex d-sm-none"> Turnos </h4>
+
+
+                    </div>
+
+
                 </div>
             </div>
         </div>
@@ -86,7 +113,7 @@
     <footer class="mt-auto bg-dark text-light text-center">
         <p> IHC-Grupo 4 Copyright © 2021 Todos los derechos reservados</p>
     </footer>
-
+    <script src="https://kit.fontawesome.com/160f79963e.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.min.js "></script>
     <script src="js/bootstrap.min.js "></script>
     <script src="js/popper.min.js "></script>
