actualización Panel y Reporte

--- a/PanelPM.html
+++ b/PanelPM.html
@@ -93,13 +93,69 @@
                             </tbody>
                         </table>
 
-                        <h3 class="font-weight-bold d-none d-sm-flex"> Turnos </h3>
-                        <h4 class="font-weight-bold d-flex d-sm-none"> Turnos </h4>
+                        <div class="row">
+                            <div class="col">
+                                <h3 class="font-weight-bold d-none d-sm-flex"> Turnos </h3>
+                                <h4 class="font-weight-bold d-flex d-sm-none"> Turnos </h4>
+                                <section style="overflow-y: scroll; height:300px;">
+                                    <button class="btn btn-light card d-inline-flex m-2 " style="width: 16rem;" data-toggle="collapse" href="#fecha" role="button" aria-expanded="false" aria-controls="fecha">
+                                        <div class="card-body">
+                                            <h3>Lunes 12 de Enero</h3>
+                                        </div>
+                                    </button>
 
+                                    <button class="btn btn-light card d-inline-flex m-2" style="width: 16rem;">
+                                        <div class="card-body">
+                                            <h3>Martes 13 de Enero</h3>
+                                        </div>
+                                    </button>
+                                    <button class="btn btn-light card d-inline-flex m-2" style="width: 16rem;">
+                                        <div class="card-body">
+                                            <h3>Martes 13 de Enero</h3>
+                                        </div>
+                                    </button>
+                                    <button class="btn btn-light card d-inline-flex m-2" style="width: 16rem;">
+                                        <div class="card-body">
+                                            <h3>Martes 13 de Enero</h3>
+                                        </div>
+                                    </button>
+                                    <button class="btn btn-light card d-inline-flex m-2" style="width: 16rem;">
+                                        <div class="card-body">
+                                            <h3>Martes 13 de Enero</h3>
+                                        </div>
+                                    </button>
+                                    <button class="btn btn-light card d-inline-flex m-2" style="width: 16rem;">
+                                        <div class="card-body">
+                                            <h3>Martes 13 de Enero</h3>
+                                        </div>
+                                    </button>
 
+                                </section>
+                            </div>
+                        </div>
                     </div>
+                    <div class="d-flex col-lg-6">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Hora</th>
+                                    <td>8:00 am - 12:00 pm</td>
+                                </tr>
 
+                                <tr>
+                                    <th scope="row">Lugar</th>
+                                    <td>Hospital Aquiles Matto </td>
+                                </tr>
 
+                                <tr>
+                                    <th scope="row">Asistio</th>
+                                    <td class="text-warning">Pendiente</td>
+                                    <!--<td class="text-success">Asistió</td>
+                                    <td class="text-danger">No Asistió</td>-->
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
