--- a/PanelPM.html
+++ b/PanelPM.html
@@ -33,14 +33,11 @@
         </div>
     </nav>
 
-    <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-tercero">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-left">
-                    <h3 class="font-weight-bold d-none d-sm-flex">Personal Médico </h3>
-                    <h4 class="font-weight-bold d-flex d-sm-none">Personal Médico </h4>
-                </div>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom bg-tercero">
+        <div class="col-lg-12 d-inline-flex">
+            <button class="d-inline-flex d-lg-none btn btn-primary h-50 my-auto" id="menu-toggle"> <i class=" p-1 fas fa-lg fa-bars"></i></button>
+            <h3 class="font-weight-bold text-white col-4 mt-2 d-none d-sm-flex"> Personal Médico </h3>
+            <h4 class="font-weight-bold text-white col-4 mt-2 d-flex d-sm-none"> Personal Médico </h4>
         </div>
     </nav>
 
@@ -52,7 +49,7 @@
             <div class="list-group list-group-flush d-inline-flex align-items-center">
                 <a href="#" class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
                     <i class="fas fa-user"></i> Información Personal y Turnos</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">
+                <a href="ReportePM.html" class="list-group-item list-group-item-action bg-light">
                     <i class="fas fa-question"></i> Consultar fecha de Vacunación</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">
                     <i class="fas fa-file-signature"></i> Solicitar cambio de turno</a>
@@ -64,11 +61,6 @@
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
-
-            <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom d-md-none">
-                <button class="btn btn-primary " id="menu-toggle">Desplegar Menú</button>
-            </nav>
-
             <div class="container-fluid">
                 <div class="row m-4">
                     <div class="col-lg-6">
@@ -134,8 +126,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex col-lg-6">
-                        <table class="table table-bordered">
+
+                    <div class="col-lg-6 text-center my-auto
+                    ">
+                        <h3 class="font-weight-bold d-none d-sm-block"> Turno Detallado </h3>
+                        <h4 class="font-weight-bold d-block d-sm-none"> Turno Detallado </h4>
+                        <table class="table table-bordered my-auto">
                             <tbody>
                                 <tr>
                                     <th scope="row">Hora</th>
