--- a/ReportePM.html
+++ b/ReportePM.html
@@ -48,7 +48,7 @@
         <div class="bg-light border-right" id="sidebar-wrapper">
             <div class="sidebar-heading h4">MENÚ DE OPCIONES</div>
             <div class="list-group list-group-flush d-inline-flex align-items-center">
-                <a href="#" class="list-group-item list-group-item-action bg-light ">
+                <a href="PanelPM.html" class="list-group-item list-group-item-action bg-light ">
                     <i class="fas fa-user"></i> Información Personal y Turnos</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
                     <i class="fas fa-question"></i> Consultar fecha de Vacunación</a>
